# advent-of-code

./: .gitignore  Cargo.toml  aoc.sh  file.rs  perf.hist.0  shell.nix
2022/: Cargo.toml
2022/day00/benches/: benches.rs
2022/day01/benches/: benches.rs
2022/day01/src/: lib.rs  main.rs
2023/day00/: Cargo.toml
2023/day00/src/: lib.rs  main.rs
2023/day01/: Cargo.toml  README.md
2023/day01/src/: branchless.rs  lib.rs  naive.rs  no_lines.rs  vectorized.rs  zero_alloc.rs
2023/day02/benches/: benches.rs
2023/day02/src/: lib.rs
2023/day03/: Cargo.toml
2023/day04/: Cargo.toml
2023/day04/benches/: benches.rs
2023/day04/src/: lib.rs  p2ascii.rs  p2cache.rs  p2chunks.rs  p2manual_slicing.rs  p2no_alloc.rs  p2vectorized.rs
2023/day07/: Cargo.toml
2023/day08/: Cargo.toml
2023/day1/: Cargo.toml  README.md
2023/day10/: Cargo.toml  input_small13.txt  input_small14.txt
2023/day11/: Cargo.toml
2023/day12/: Cargo.toml
2023/day15/: Cargo.toml
2023/day2/: Cargo.toml
2023/day3/: Cargo.toml
2024/: Cargo.toml
2024/day01/: Cargo.toml
2024/day01/src/: lib.rs
2024/day02/: Cargo.toml
2024/day04/: Cargo.toml
2024/day05/: Cargo.toml
2024/day06/: Cargo.toml
2024/day07/: input.txt  input_small.txt
2024/day08/: Cargo.toml
2024/day08/benches/: benches.rs
2024/day08/src/: lib.rs  main.rs
2024/day09/: Cargo.toml
2024/day10/: input.txt
2024/day11/: Cargo.toml  input.txt
2024/day12/: Cargo.toml
2024/day13/: Cargo.toml  input.txt
2024/day24/: Cargo.toml  input.txt
helper/: Cargo.toml
helper/src/: cmd.rs  ext.rs  hash.rs  lib.rs
(+81 files in other folders)
