[package]
name = "day04"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom.workspace = true
helper.workspace = true
divan.workspace = true
arrayvec = "0.7.4"
bstr = "1.8.0"

[[bench]]
name = "benches"
harness = false
