[package]
name = "day01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom.workspace = true
helper.workspace = true
divan.workspace = true
rustc-hash = "2.1.0"
memchr = "2.7.4"
num-traits = "0.2.19"
bstr = "1.11.0"

[[bench]]
name = "benches"
harness = false
