[package]
name = "day08"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom.workspace = true
helper.workspace = true
divan.workspace = true
smallvec = "1.13.2"

[[bench]]
name = "benches"
harness = false
